--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "workspaces": [
-    "workspace-a",
-    "workspace-b"
+    "frontend",
+    "backend",
+    "common"
   ]
 }
