--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,78 @@
 {
-  "name": "forntend",
+  "name": "gatsby-starter-ts",
+  "description": "A TypeScript starter for Gatsby that includes all you need to build amazing projects",
   "version": "1.0.0",
+  "private": true,
+  "author": "João Pedro Schmitz <hey@joaopedro.dev> (https://joaopedro.dev)",
+  "license": "MIT",
+  "keywords": [
+    "gatsby",
+    "starter",
+    "typescript"
+  ],
+  "scripts": {
+    "start": "gatsby develop",
+    "build": "gatsby build",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "type-check": "tsc",
+    "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
+    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
+    "postinstall": "husky install"
+  },
+  "lint-staged": {
+    "./src/**/*.{ts,js,jsx,tsx}": [
+      "yarn lint --fix",
+      "yarn format"
+    ]
+  },
   "dependencies": {
-    "cross-env": "5.0.5",
-    "common": "1.0.0"
+    "@apollo/client": "^3.0.2",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/styles": "^4.11.3",
+    "apollo-boost": "^0.4.9",
+    "apollo-link-error": "^1.1.13",
+    "cross-fetch": "^3.0.5",
+    "gatsby": "3.2.1",
+    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-source-graphql": "^2.0.6",
+    "gatsby-source-mongodb": "^3.3.0",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.3",
+    "isomorphic-fetch": "^3.0.0",
+    "react": "17.0.2",
+    "react-apollo": "^3.1.5",
+    "react-dom": "17.0.2",
+    "tsconfig-paths-webpack-plugin": "3.5.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-conventional": "12.1.1",
+    "@types/node": "14.14.37",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
+    "babel-plugin-root-import": "6.6.0",
+    "commitizen": "4.2.3",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.24.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-root-import": "1.0.4",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "6.0.0",
+    "lint-staged": "10.5.4",
+    "prettier": "2.2.1",
+    "typescript": "4.2.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
