--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@apollo/client": "^3.0.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "*",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
     "apollo-boost": "^0.4.9",
     "apollo-link-error": "^1.1.13",
